terminal    2005/10/11 03:27:03 UTC	(20051011-2831)
  Log:
  remove a debug printf that managed to stay in

  Changes:	Modified:
  +1 -1		trunk/libatheme/balloc.c (File Modified) 


terminal    2005/10/11 03:24:28 UTC	(20051011-2829)
  Log:
  zeroing memory in local mmap implementation for windows compatibility

  Changes:	Modified:
  +7 -3		trunk/libatheme/balloc.c (File Modified) 


jilles      2005/10/10 23:55:34 UTC	(20051010-2827)
  Log:
  Fall back to TS5 if no numeric was specified or our uplink
  does not support TS6. Do some crude validation on the
  configured numeric (sid).
  

  Changes:	Modified:
  +41 -8	trunk/protocol/charybdis.c (File Modified) 


nenolod     2005/10/10 21:53:24 UTC	(20051010-2825)
  Log:
  - ConfTable changes for later fun.
  

  Changes:	Modified:
  +2 -0		trunk/include/confparse.h (File Modified) 


nenolod     2005/10/10 21:03:25 UTC	(20051010-2823)
  Log:
  - bump us up to 0.3beta5.
  

  Changes:	Modified:
  +11 -11	trunk/configure (File Modified) 
  +1 -1		trunk/configure.ac (File Modified) 


terminal    2005/10/10 04:12:13 UTC	(20051010-2821)
  Log:
  Some fixes to get closer to a compile on Win32/MinGW.

  Changes:	Modified:
  +2 -0		trunk/include/extern.h (File Modified) 
  +12 -5	trunk/include/stdinc.h (File Modified) 
  +2 -0		trunk/src/atheme.c (File Modified) 
  +9 -0		trunk/src/function.c (File Modified) 
  +7 -1		trunk/src/module.c (File Modified) 
  +6 -0		trunk/src/signal.c (File Modified) 


pfish       2005/10/10 00:15:26 UTC	(20051010-2819)
  Log:
  Wallops when SRA uses override to drop a nick/account 
  

  Changes:	Modified:
  +4 -0		trunk/modules/nickserv/drop.c (File Modified) 
  +3 -0		trunk/modules/userserv/drop.c (File Modified) 


pfish       2005/10/09 23:51:15 UTC	(20051009-2817)
  Log:
  Bugfix /US DROP
  

  Changes:	Modified:
  +1 -1		trunk/modules/userserv/drop.c (File Modified) 


pfish       2005/10/09 23:50:38 UTC	(20051009-2815)
  Log:
  Bugfix /NS DROP
  

  Changes:	Modified: